--- a/config/database.yml
+++ b/config/database.yml
@@ -18,11 +18,13 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: subhranshu
+  password: mindfire
 
 
 development:
   <<: *default
-  database: blog_development
+  database: rails_with_react_development
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
