--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,7 @@ default: &default
 
 development:
   <<: *default
-  database: rails_with_react_development
+  database: BLOG_APP_DEVELOPMENT
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
